# GScrape

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  task
GScrape/: __init__.py  example.md  scrapper.py
gscrape/: __init__.py
tests/: test.py
