[metadata]
name = GScrape
version = 0.0.1
author = soumyadipghorai
author_email = work.soumyadipghorai@gmail.com
description = Beautiful Soup based scrapper tool to scrape websites and convert it into markdown format. It can be used to pass data into LLM.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soumyadipghorai/GScrape
project_urls =
    Bug Tracker = https://github.com/soumyadipghorai/GScrape/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options] 
packages = find:
python_requires = >=3.6
